# Gemma4-Hackathon-ShangHai

submissions/2026/track_A/AI-Worker/: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
submissions/2026/track_A/AI-Worker/src/: App.vue  main.ts  vite-env.d.ts
submissions/2026/track_A/AI-Worker/src-tauri/: Cargo.toml  tauri.conf.json
submissions/2026/track_A/AI-Worker/src-tauri/capabilities/: default.json
submissions/2026/track_A/AI-Worker/src-tauri/icons/: icon.icns
submissions/2026/track_A/AI-Worker/src-tauri/src/: agent_tools.rs  common.rs  lib.rs  main.rs  memory_fs.rs  scheduler.rs  skills.rs  task_persistence.rs
submissions/2026/track_A/AI-Worker/src/api/: credits.ts  feedback.ts  help.ts  index.ts  skills.ts  suites.ts  user.ts
submissions/2026/track_A/AI-Worker/src/components/: Layout.vue  MarkdownRenderer.vue  MemoryTreeNode.vue
submissions/2026/track_A/AI-Worker/src/mock/: credits.ts  feedback.ts  help.ts  index.ts  skills.ts  suites.ts
submissions/2026/track_A/AI-Worker/src/router/: index.ts
submissions/2026/track_A/AI-Worker/src/services/: agentLoop.ts  taskSimulator.ts
submissions/2026/track_A/AI-Worker/src/stores/: agentStore.ts  index.ts
submissions/2026/track_A/AI-Worker/src/test/: llmClient.test.ts  reactAgent.manual.ts  reactAgent.test.ts
submissions/2026/track_A/AI-Worker/src/types/: agent-def.ts  agent.ts  chat.ts  integration.ts  llm.ts  permission.ts  scheduler.ts  system.ts  task.ts
submissions/2026/track_A/CrossReaction/: README.md
(+189 files in other folders)
