[package]
name = "aipcowork"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aipcowork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cron = "0.12"
chrono = "0.4"
tokio = { version = "1", features = ["time", "rt"] }
glob = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
sysinfo = "0.30"
serde_yaml = "0.9"
base64 = "0.22"
ssh2 = "0.9"
mysql = "25"
postgres = "0.19"

